--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,6 @@
-title: Upcoming SCDS Events # *** Enter workshop title here 
-github_repo_url: "https://scds.github.io/event-listings/" # *** Enter workshop URL (in github pages) here
-gh_edit_repository: "https://github.com/scds/event-listings" # *** Enter the github URL for your repo
-ga_tracking: "" # *** Set it to "G-HTFKKVJK6K" when website is done.  
+title: SCDS Upcoming Events # *** Enter workshop title here 
+ga_tracking: "" # *** This needs to be set up in Google Analytics once you know the website URL (ask Jay to do this). Then the tracking code needs to be taken from Google Analytics and pasted here.  
 
-# This line appears in the footer. Use it to credit the people who created the workshop content, and those who set up the online pages. 
-# If you know some HTML, you can use HTML tags.
-# To create a link: <a href="PUT URL HERE">the text you want to show up</a>
-# Template: 'Module content created by <a href="LINK HERE">NAME</a> and <a href="LINK HERE">NAME</a>; edited for online use and online pages created by <a href="LINK HERE">NAME</a>.'
-credits: 'Module content created by the <a href="https://scds.ca">Sherman Centre for Digital Scholarship</a>.'
-
-# DMDS Settings
-subtitle: "This workshop is part of the Do More with Digital Scholarship (DMDS) series."
-nav_footer_logo_bottom: "https://raw.githubusercontent.com/scds/jtd-mcmaster/main/assets/images/scds-logo.png"
-nav_footer_logo_bottom_href: "https://scds.ca/"
-nav_footer_logo_top: ""
-nav_footer_logo_top_href: ""
-
-# DASH settings
-# subtitle: 'This workshop is part of the Data Analysis Support Hub (DASH) series.'
-# nav_footer_logo_bottom: "https://raw.githubusercontent.com/scds/jtd-mcmaster/main/assets/images/scds-logo.png"
-# nav_footer_logo_bottom_href: "https://scds.ca/"
-# nav_footer_logo_top: "https://raw.githubusercontent.com/scds/jtd-mcmaster/main/assets/images/dash-logo.png"
-# nav_footer_logo_top_href: "https://library.mcmaster.ca/services/dash"
-
-# RDM settings
-# subtitle: 'This workshop is part of the <a href="https://rdm.mcmaster.ca/">Research Data Management (RDM)</a> series.'
-# nav_footer_logo_bottom: "https://raw.githubusercontent.com/scds/jtd-mcmaster/main/assets/images/scds-logo.png"
-# nav_footer_logo_bottom_href: "https://scds.ca/"
-# nav_footer_logo_top: "https://raw.githubusercontent.com/scds/jtd-mcmaster/main/assets/images/rdm-logo.png"
-# nav_footer_logo_top_href: "https://rdm.mcmaster.ca/"
-
-# OTHER settings - Override series specific settings
-# subtitle: "This workshop is part of the __ series."
-# nav_footer_logo_bottom: "https://raw.githubusercontent.com/scds/jtd-mcmaster/main/assets/images/scds-logo.png"
-# nav_footer_logo_bottom_href: "https://scds.ca/"
-# nav_footer_logo_top: ""
-# nav_footer_logo_top_href: ""
 
 #  _____       _   _   _          _      _                            
 # | ____|   __| | (_) | |_       / \    | |__     ___   __   __   ___ 
@@ -43,11 +8,12 @@ nav_footer_logo_top_href: ""
 # | |___  | (_| | | | | |_     / ___ \  | |_) | | (_) |  \ V /  |  __/
 # |_____|  \__,_| |_|  \__|   /_/   \_\ |_.__/   \___/    \_/    \___|
 
-aux_links:
-  "SCDS Workshops": 
-    - "https://scds.ca/searchable-online-learning/"
 
-navigation: true
+
+github_repo_url: "https://scds.github.io/event-listings/" # *** Enter workshop URL (in github pages) here
+gh_edit_repository: "https://github.com/scds/event-listings" # *** Enter the github URL for your repo
+
+navigation: false
 
 # Override Default SCDS Web Icon
 favicon_ico: ""
@@ -63,7 +29,7 @@ color_scheme: mcmaster
 heading_anchors: true
 
 # Back to top link
-back_to_top: true
+back_to_top: false
 back_to_top_text: "Back to top"
 
 # Removed by Richie - Requires manual updating. Automatic updating alternative is done in footer_custom.html.
@@ -72,7 +38,7 @@ back_to_top_text: "Back to top"
 # last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
 
 # Footer "Edit this page on GitHub" link text
-gh_edit_link: true # show or hide edit this page link
+gh_edit_link: false # show or hide edit this page link
 gh_edit_link_text: "View this content on GitHub"
 gh_edit_branch: "main" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
@@ -85,7 +51,6 @@ plugins:
 
 # Google Analytics Tracking
 ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (true by default)
-
 
 # Callout titles an colors
 callouts_level: quiet # or loud
