--- a/.github/workflows/update-events.yml
+++ b/.github/workflows/update-events.yml
@@ -2,7 +2,7 @@ name: Update LibCal events
 
 on:
   schedule:
-    - cron: '*/* 0 * * *'   
+    - cron: '0 0 * * *'   
   workflow_dispatch:         
 
 jobs:
