--- a/.github/workflows/update-events.yml
+++ b/.github/workflows/update-events.yml
@@ -2,8 +2,8 @@ name: Update LibCal events
 
 on:
   schedule:
-    - cron: '0 0 * * *'   
-  workflow_dispatch:         
+    - cron: '0 11 * * *'  # Runs at 11:00 UTC every day = 7 AM EDT/EST
+  workflow_dispatch:       
 
 jobs:
   fetch:
